[tool.poetry]
name = "dockershell"
version = "Define initial program."
description = "Use Docker to describe your project build requirements"
authors = ["Sean R. Spillane"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
click = "^8.1.3"
rich = "^13.3.2"
sh = "^2.0.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.6"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
